compiler/testData/diagnostics/tests/incompleteCode/variableDeclarationInSelector.kt
// FIR_IDENTICAL
fun foo(s: String) {
    s.<!SYNTAX!><!>
    konst b = 42
}
